--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
     <div class="container">
         <header class="hero">
             <div class="hero_text">
-                <h2 class="title">Mentoria</h2>
+                <h2 class="title ">Mentoria</h2>
                 <h1 class="title--big">Advocacia criminal</h1>
-                <p class="text">
+                <p class="text scale-up-bottom">
                     Se você é advogado ou estudante de Direito e deseja aprimorar seus conhecimentos na área criminal,
                     a Mentoria em Advocacia Criminal é a oportunidade que você precisa para transformar sua carreira.
                     Com uma abordagem prática e personalizada,
@@ -73,7 +74,7 @@
                 </li>
             </ul>
 
-            <div class="info">
+            <div class="info" data-aos="fade-up">
                 <div class="info_image">
                     <img src="./src/img/mulher-jaleco-azul (1).jpg" alt="Mulher de jaleco azul">
                 </div>
@@ -105,6 +106,10 @@
             </div>
         </footer>
     </div>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
